<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/done"
        android:icon="@drawable/ic_done"
        android:title="@string/done"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/overflowMenu"
        android:title=""
        android:icon="@drawable/ic_overflow_menu"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/addReminder"
                android:icon="@drawable/ic_reminder"
                android:title="@string/add_reminder"
                android:visible="false"
                app:showAsAction="never" />

            <item
                android:id="@+id/removeReminder"
                android:icon="@drawable/ic_remove_reminder"
                android:title="@string/remove_reminder"
                android:visible="false"
                app:showAsAction="never" />

            <item
                android:id="@+id/addImage"
                android:icon="@drawable/ic_add_image"
                android:title="@string/add_image"
                android:visible="false"
                app:showAsAction="never" />

            <item
                android:id="@+id/removeImage"
                android:title="@string/remove_image"
                android:visible="false"
                android:icon="@drawable/ic_remove_image"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>